--- a/tootoo-templates/hamburger-css/hamburger-css.html
+++ b/tootoo-templates/hamburger-css/hamburger-css.html
@@ -263,7 +263,7 @@ function onHashChange() {
 
 		divContents.innerHTML = `<iframe src=${ url } height=100% width=100% ></iframe>`;
 
-	} else if ( ulc.endsWith( '.gif' ) || ulc.endsWith( '.png' ) || ulc.endsWith( '.jpg' ) || ulc.endsWith( '.svg' )) {
+	} else if ( ulc.endsWith( '.gif' ) || ulc.endsWith( '.png' ) || ulc.endsWith( '.jpg' ) || ulc.endsWith( '.ico' ) || ulc.endsWith( '.svg' ) ) {
 
 		divContents.innerHTML = `<img src=${ url } >`;
 
