hamburger theme cms

--- a/tootoo-templates/hamburger-theme-api/hamburger-theme-api.html
+++ b/tootoo-templates/hamburger-theme-api/hamburger-theme-api.html
@@ -62,6 +62,14 @@
 
 		<div id = "divMenuItems" ></div>
 
+		<p>Click any <a id=aMenuSource >
+			<img src="https://rawgit.com/ladybug-tools/spider/master/images/github-mark.png" height=14 style=vertical-align:middle>
+		</a> icon to view source code on GitHub.
+
+		<p>Click any &#x2750; icon to go full screen & get link to individual file.</p>
+
+		<p>Tooltips provide file size.</p>
+
 		<div id = "divExtras" ></div>
 
 		<div id= "divFooter" >
@@ -585,13 +593,12 @@ function callbackGitHubMenu ( files ) {
 	/*
 	const urlGitHubSource = 'https://github.com/ladybug-tools/spider/blob/master/gbxml-sample-files/';
 	const urlGitHubPage = 'https://rawgit.com/ladybug-tools/spider/master/gbxml-sample-files/';
-	const iconGitHubMark = '<img src="https://rawgit.com/ladybug-tools/spider/master/images/github-mark.png" height=14 style=vertical-align:middle>';
 	*/
 
 	const urlGitHubSource = 'https://github.com/mrdoob/three.js/blob/master/examples/';
 	const urlGitHubPage = 'https://rawgit.com/mrdoob/three.js/master/examples/';
-	const iconGitHubMark = '<img src="https://rawgit.com/ladybug-tools/spider/master/images/github-mark.png" height=14 style=vertical-align:middle>';
 
+	const iconGitHubMark = '<img src="https://rawgit.com/ladybug-tools/spider/master/images/github-mark.png" height=14 style=vertical-align:middle>';
 
 	let txt = '';
 
