--- a/tootoo-templates/hamburger-theme-cms/hamburger-theme-cms.html
+++ b/tootoo-templates/hamburger-theme-cms/hamburger-theme-cms.html
@@ -6,7 +6,7 @@
 <meta name=description content="basic html template with sliding menu, css selection, Markdown capability and frequently used pages" >
 <meta name=keywords content="JavaScript,GitHub,FOSS,3D,STEM" >
 <meta name = "date" content = "2018-07-24" >
-<title>hamburger theme r1.0</title>
+<title>hamburger theme cms r1.1</title>
 <style>
 /* Copyright 2018 pushMe pullYou authors. MIT License */
 
@@ -60,7 +60,19 @@
 
 		<div id = "divTitle" ></div>
 
+		<div id = "divBreadcrumbs" ></div>
+
 		<div id = "divMenuItems" ></div>
+
+		<hr>
+
+		<p>Click any <a href="" >
+			<img src="https://rawgit.com/ladybug-tools/spider/master/images/github-mark.png" height=14 style=vertical-align:middle>
+		</a> icon to view source code on GitHub.
+
+		<p>Click any &#x2750; icon to go full screen & get link to individual file.</p>
+
+		<p>Tooltips provide file size.</p>
 
 		<div id = "divExtras" ></div>
 
@@ -75,11 +87,11 @@
 
 			<details>
 
-					<summary>Settings</summary>
+				<summary>Settings</summary>
 
-					<div id=divBootswatch ></div>
+				<div id=divBootswatch ></div>
 
-					<div id=divCssOthers ></div>
+				<div id=divCssOthers ></div>
 
 			</details>
 
@@ -100,7 +112,7 @@
 
 			</details>
 
-			<h1 onclick=divMenu.scrollTop=0; style=cursor:pointer;text-align:center; title='go to top of page' > &#x2766; </h1>
+			<h3 onclick=divMenu.scrollTop=0; style=cursor:pointer;text-align:center; title='go to top of page' > &#x2766; </h3>
 
 		</div>
 
@@ -118,6 +130,20 @@
 
 // https://github.com/showdownjs/showdown << check for latest rev from time to time 1.8.6 2018-07-02
 // jshint esversion: 6
+
+
+const user = 'pushme-pullyou';
+const repo = '/pushme-pullyou.github.io';
+const pathRepo = '';
+const branch = '/master/'
+
+const iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 >';
+const urlGitHubSource = 'https://github.com/' + user + repo;
+const urlGitHubApiContents = 'https://api.github.com/repos/' + user + repo + '/contents/' + pathRepo;
+
+//const urlGitHubPage = location.href.includes( '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + branch;
+const urlGitHubPage  = 'https://rawgit.com/' + user + repo + branch;
+//console.log( 'urlGitHubPage', urlGitHubPage );
 
 
 //	location.hash = '../README.md';
@@ -289,6 +315,12 @@ function onHashChange() {
 	const url = !location.hash ? uriDefaultFile : location.hash.slice( 1 );
 	const ulc = url.toLowerCase();
 
+	const crumbs = url.slice( urlGitHubPage.length );
+	const pathCurrent = crumbs.lastIndexOf( '/' ) > 0 ? crumbs.slice( 0, crumbs.lastIndexOf( '/' ) ) : '';
+	//console.log( 'pathCurrent',  pathCurrent );
+
+	setMenuGitHubPathFileNames( pathCurrent );
+
 	if ( ulc.endsWith( '.md' ) ) {
 
 		requestFile( url, callbackMarkdown );
@@ -357,7 +389,7 @@ function callbackToTextarea( xhr ){
 
 function onDrop( event ) {
 
-	console.log( 'event', event );
+	//console.log( 'event', event );
 
 	const iframeUrl = event.dataTransfer.getData( 'URL' );
 
@@ -527,6 +559,132 @@ function toggleNav() {
 
 }
 
+
+
+//////////
+
+
+
+function setMenuGitHubPathFileNames( path = '' ) {
+
+	const url = urlGitHubApiContents + path;
+
+	requestFile( url, callbackGitHubPathFileNames );
+
+	setBreadcrumbs( path );
+
+}
+
+
+
+function callbackGitHubPathFileNames( xhr ) {
+
+	const response = xhr.target.response;
+	const items = JSON.parse( response );
+	const len = pathRepo.length;
+
+	let txt = '';
+
+	if ( items.message ) { console.log( items.message ); return; }
+
+	const ignoreFolders = [ 'data' ]; //, 'plugins'
+
+	for ( let item of items ) {
+
+		if ( item.type === 'dir' ) {
+
+			if ( ignoreFolders.includes( item.name ) ) { continue; }
+
+			txt +=
+				'<div style=margin-bottom:8px; >' +
+					'<a href=JavaScript:setMenuGitHubPathFileNames("' + item.path.slice( len )  + '"); >&#x1f4c1; ' +
+						item.name  +
+					'</a>' +
+				'</div>' +
+			'';
+
+		}
+
+	}
+
+	const ignoreFiles = [ '.gitattributes', '.gitignore', '404.html' ];
+
+	for ( let item of items ) {
+
+		if ( item.type === 'file' ) {
+
+			if ( ignoreFiles.includes( item.name ) ) { continue; }
+
+			itemPath = encodeURI( item.path.slice( len ) );
+
+			txt += // try grid or flexbox??
+				'<table><tr>' +
+
+					'<td><a href="' + urlGitHubSource + '/blob' + branch + itemPath + '" target=_top >' + iconInfo + '</a></td>' +
+					'<td>' +
+
+						'<a href=#' + urlGitHubPage + pathRepo + itemPath +
+						' title="' + item.size.toLocaleString() + ' bytes" > ' + item.name + '</a> ' +
+						( item.path.endsWith( 'html' ) ? '<a href=' + urlGitHubPage + pathRepo + itemPath + ' >&#x2750;</a>' : '' ) +
+
+					'</td>' +
+
+				'</tr></table>';
+
+			// simplify
+			if ( ( !location.hash || location.hash.toLowerCase().endsWith( 'readme.md' ) )
+				//&& item.path !== 'README.md'
+				&& item.name.toLowerCase() === 'readme.md' ) {
+
+				location.hash = urlGitHubPage + pathRepo + itemPath;
+
+			}
+
+		}
+
+	}
+
+	divMenuItems.innerHTML = txt;
+
+}
+
+
+
+function setBreadcrumbs( path ) {
+
+	let txt =
+		'<b>' +
+			'<a href=JavaScript:setMenuGitHubPathFileNames(); >' +
+
+				( pathRepo ? pathRepo : '<span style=font-size:24px >&#x2302</span>' ) +
+
+			'</a> &raquo; ' +
+		'</b>';
+
+	const folders = path ? path.split( '/' ) : [] ;
+
+	let str = '';
+
+	for ( let folder of folders ) {
+
+		str += folder + '/';
+
+		txt += '<b><a href=JavaScript:setMenuGitHubPathFileNames("' + str.slice( 0, -1 ) + '"); >' + folder + '</a> &raquo; </b>';
+
+	}
+
+	divBreadcrumbs.innerHTML = txt;
+
+}
+
+
+
+function setGPATStorage() {
+
+	const GitHubPersonalAccessToken = inpGitHubPersonalAccessToken.value;
+	localStorage.setItem('GitHubPersonalAccessToken', GitHubPersonalAccessToken );
+
+}
 </script>
 </body>
 </html>
