--- a/hamburger-theme-cms.html
+++ b/hamburger-theme-cms.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" >
 <meta name="viewport" content = "width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" >
-<meta name=description content="basic html template with sliding menu, css selection, Markdown capability and frequently used pages" >
+<meta name=description content="This is a basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop fule reading capability, access to frequently used pages and more" >
 <meta name=keywords content="JavaScript,GitHub,FOSS,3D,STEM" >
 <meta name = "date" content = "2018-07-24" >
 <title>hamburger theme cms r1.1</title>
@@ -59,6 +59,8 @@
 	<div id = "divMenu" class="jumbotron" >
 
 		<div id = "divTitle" ></div>
+
+		<p>'Hamburger Theme CMS' is sample of what you will find here. It's a TooToo template.</p>
 
 		<div id = "divBreadcrumbs" ></div>
 
@@ -141,14 +143,15 @@ const iconInfo = '<img src="https://status.github.com/images/invertocat.png" hei
 const urlGitHubSource = 'https://github.com/' + user + repo;
 const urlGitHubApiContents = 'https://api.github.com/repos/' + user + repo + '/contents/' + pathRepo;
 
-//const urlGitHubPage = location.href.includes( '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + branch;
-const urlGitHubPage  = 'https://rawgit.com/' + user + repo + branch;
+const urlGitHubPage = location.href.includes( '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + branch;
+//const urlGitHubPage  = 'https://rawgit.com/' + user + repo + branch;
+//const urlGitHubPage = '';
 //console.log( 'urlGitHubPage', urlGitHubPage );
 
 
 //	location.hash = '../README.md';
 const uriDefaultFile = 'README.md';
-const urlSourceCode = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-css";
+const urlSourceCode = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-theme-cms";
 
 let themeName = localStorage.getItem( 'themeName' ) || 'https://bootswatch.com/_vendor/bootstrap/dist/css/bootstrap.css';
 
@@ -159,26 +162,26 @@ let yDown = null;
 init();
 
 
+
 function init() {
 
 	updateCss( themeName );
 
-	divTitle.innerHTML =
-	`
-		<div class="" >
-			<a class="breadcrumb-item" href = "../index.html" target="_top" >repo</a>
-			<a class="breadcrumb-item" href= "./index.html" target="_top" style=font-size:24px; >&#x2302;</a>
-		</div>
+		//<a class="breadcrumb-item" href = "../index.html" target="_top" >repo</a>
+		//<div class="" >
 
-		<h2>
+		//	<a class="breadcrumb-item" href= "./index.html" target="_top" style=font-size:24px; >&#x2302;</a>
+		//</div>
+
+	divTitle.innerHTML =
+	`<h2>
 			<a href=${ urlSourceCode } target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 ></a>
 			<a href = "" title = "Click to reload this page" >${document.title}</a>
-		</h2>
+	</h2>
 
-		<p>${ document.head.querySelector( '[name=description]' ).content }</p>
-	`;
+	<p>${ document.head.querySelector( '[name=description]' ).content }</p>`;
 
-	setTestingExtras( divExtras );
+	//setTestingExtras( divExtras );
 
 	setTheme();
 
@@ -321,7 +324,6 @@ function onHashChange() {
 
 	setMenuGitHubPathFileNames( pathCurrent );
 
-
 	if ( ulc.endsWith( '.md' ) ) {
 
 		requestFile( url, callbackMarkdown );
@@ -333,7 +335,7 @@ function onHashChange() {
 
 		divContents.innerHTML = `<iframe src=${ url } height=100% width=100% ></iframe>`;
 
-	} else if ( /\.(jpe?g|png|ico|svg|gif)$/i.test( file.name)  ) {
+	} else if ( /\.(jpe?g|png|ico|svg|gif)$/i.test( ulc )  ) {
 	//} else if ( ulc.endsWith( '.gif' ) || ulc.endsWith( '.png' ) || ulc.endsWith( '.jpg' ) || ulc.endsWith( '.ico' ) || ulc.endsWith( '.svg' ) ) {
 
 		divContents.innerHTML = `<img src=${ url } >`;
@@ -390,7 +392,7 @@ function callbackToTextarea( xhr ){
 
 function onDrop( event ) {
 
-	console.log( 'event', event );
+	//console.log( 'event', event );
 
 	const iframeUrl = event.dataTransfer.getData( 'URL' );
 
@@ -564,8 +566,6 @@ function toggleNav() {
 
 //////////
 
-
-
 function setMenuGitHubPathFileNames( path = '' ) {
 
 	const url = urlGitHubApiContents + path;
@@ -637,7 +637,8 @@ function callbackGitHubPathFileNames( xhr ) {
 				//&& item.path !== 'README.md'
 				&& item.name.toLowerCase() === 'readme.md' ) {
 
-				location.hash = urlGitHubPage + pathRepo + itemPath;
+				//location.hash = urlGitHubPage + pathRepo + itemPath;
+				location.hash = pathRepo + itemPath;
 
 			}
 
@@ -686,6 +687,7 @@ function setGPATStorage() {
 	localStorage.setItem('GitHubPersonalAccessToken', GitHubPersonalAccessToken );
 
 }
+
 </script>
 </body>
 </html>
