--- a/tootoo-templates/hamburger-theme-cms/hamburger-theme-cms.html
+++ b/tootoo-templates/hamburger-theme-cms/hamburger-theme-cms.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" >
 <meta name="viewport" content = "width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" >
-<meta name=description content="basic html template with sliding menu, css selection, Markdown capability and frequently used pages" >
+<meta name=description content="This is a basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop fule reading capability, access to frequently used pages and more" >
 <meta name=keywords content="JavaScript,GitHub,FOSS,3D,STEM" >
 <meta name = "date" content = "2018-07-24" >
 <title>hamburger theme cms r1.1</title>
@@ -148,7 +148,7 @@ const urlGitHubPage  = 'https://rawgit.com/' + user + repo + branch;
 
 //	location.hash = '../README.md';
 const uriDefaultFile = 'README.md';
-const urlSourceCode = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-css";
+const urlSourceCode = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-theme-cms";
 
 let themeName = localStorage.getItem( 'themeName' ) || 'https://bootswatch.com/_vendor/bootstrap/dist/css/bootstrap.css';
 
@@ -332,7 +332,7 @@ function onHashChange() {
 
 		divContents.innerHTML = `<iframe src=${ url } height=100% width=100% ></iframe>`;
 
-	} else if ( /\.(jpe?g|png|ico|svg|gif)$/i.test( file.name)  ) {
+	} else if ( /\.(jpe?g|png|ico|svg|gif)$/i.test( ulc )  ) {
 	//} else if ( ulc.endsWith( '.gif' ) || ulc.endsWith( '.png' ) || ulc.endsWith( '.jpg' ) || ulc.endsWith( '.ico' ) || ulc.endsWith( '.svg' ) ) {
 
 		divContents.innerHTML = `<img src=${ url } >`;
@@ -563,8 +563,6 @@ function toggleNav() {
 
 //////////
 
-
-
 function setMenuGitHubPathFileNames( path = '' ) {
 
 	const url = urlGitHubApiContents + path;
@@ -685,6 +683,7 @@ function setGPATStorage() {
 	localStorage.setItem('GitHubPersonalAccessToken', GitHubPersonalAccessToken );
 
 }
+
 </script>
 </body>
 </html>
