--- a/tootoo-templates/hamburger-theme-api/hamburger-theme-api.html
+++ b/tootoo-templates/hamburger-theme-api/hamburger-theme-api.html
@@ -58,6 +58,11 @@
 
 	<div id = "divMenu" class="jumbotron" >
 
+		<div>
+			<a class="breadcrumb-item" href = "../index.html" target="_top" >repo</a>
+			<a class="breadcrumb-item" href= "./index.html" target="_top" style=font-size:24px; >&#x2302;</a>
+		</div>
+
 		<div id = "divTitle" ></div>
 
 		<div id = "divMenuItems" ></div>
@@ -146,19 +151,15 @@ function init() {
 	updateCss( themeName );
 
 	divTitle.innerHTML =
-	`
-		<div class="" >
-			<a class="breadcrumb-item" href = "../index.html" target="_top" >repo</a>
-			<a class="breadcrumb-item" href= "./index.html" target="_top" style=font-size:24px; >&#x2302;</a>
-		</div>
 
-		<h2>
-			<a href=${ urlSourceCode } target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 ></a>
-			<a href = "" title = "Click to reload this page" >${document.title}</a>
-		</h2>
+	`<h2>
+		<a href=${ urlSourceCode } target="_top" ><img src="https://status.github.com/images/invertocat.png" height=18 ></a>
+		<a href = "" title = "Click to reload this page" >${document.title}</a>
+	</h2>
 
-		<p>${ document.head.querySelector( '[name=description]' ).content }</p>
-	`;
+	<p>
+		${ document.head.querySelector( '[name=description]' ).content }
+	</p>`;
 
 	setTestingExtras( divExtras );
 
@@ -187,15 +188,17 @@ function setTestingExtras( target ) {
 
 	target.innerHTML =
 
-	`<details><summary>Extras</summary>
+	`<details open >
+
+		<summary>Extras</summary>
 
 		<p><a href="#https://pushme-pullyou.github.io/pages/markdown-help.md" >markdown-help.md</a></p>
 
 		<p><a href="#https://pushme-pullyou.github.io/plugins/iframe-carousel-r1.html" >iframe-carousel-r1.html</a></p>
 
-		<p><a href="#https://pushme-pullyou.github.io//plugins/view-github-issues.html" >view-github-issues.html</a></p>
+		<p><a href="#https://pushme-pullyou.github.io/plugins/view-github-issues.html" >view-github-issues.html</a></p>
 
-		<p><a href="#https://pushme-pullyou.github.io/tootoo-more/plugins/view-stl.html" >view-stl.html</a></p>
+		<p><a href="#https://pushme-pullyou.github.io/plugins/view-stl.html" >view-stl.html</a></p>
 
 		<p><a href="#https://pushme-pullyou.github.io//utilities/invertocat.png" >invertocat.png</a></p>
 
@@ -310,7 +313,7 @@ function onHashChange() {
 
 		divContents.innerHTML = `<iframe src=${ url } height=100% width=100% ></iframe>`;
 
-	} else if ( /\.(jpe?g|png|ico|svg|gif)$/i.test( file.name)  ) {
+	} else if ( /\.(jpe?g|png|ico|svg|gif)$/i.test( ulc )  ) {
 	//} else if ( ulc.endsWith( '.gif' ) || ulc.endsWith( '.png' ) || ulc.endsWith( '.jpg' ) || ulc.endsWith( '.ico' ) || ulc.endsWith( '.svg' ) ) {
 
 		divContents.innerHTML = `<img src=${ url } >`;
