--- a/tootoo-templates/hamburger-theme/hamburger-theme-button-active.html
+++ b/tootoo-templates/hamburger-theme/hamburger-theme-button-active.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="utf-8" >
 <meta name="viewport" content = "width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" >
-<meta name=description content="This is a basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop fule reading capability, access to frequently used pages and more" >
+<meta name=description content="basic html template with sliding menu, css selection, Markdown capability and frequently used pages" >
 <meta name=keywords content="JavaScript,GitHub,FOSS,3D,STEM" >
 <meta name = "date" content = "2018-07-24" >
-<title>hamburger theme cms r1.1</title>
+<title>hamburger theme r1.0</title>
 <style>
 /* Copyright 2018 pushMe pullYou authors. MIT License */
 
@@ -65,19 +65,7 @@
 
 		<div id = "divTitle" ></div>
 
-		<div id = "divBreadcrumbs" ></div>
-
 		<div id = "divMenuItems" ></div>
-
-		<hr>
-
-		<p>Click any <a href="" >
-			<img src="https://rawgit.com/ladybug-tools/spider/master/images/github-mark.png" height=14 style=vertical-align:middle>
-		</a> icon to view source code on GitHub.
-
-		<p>Click any &#x2750; icon to go full screen & get link to individual file.</p>
-
-		<p>Tooltips provide file size.</p>
 
 		<div id = "divExtras" ></div>
 
@@ -137,23 +125,9 @@
 // jshint esversion: 6
 
 
-const user = 'pushme-pullyou';
-const repo = '/pushme-pullyou.github.io';
-const pathRepo = '';
-const branch = '/master/'
-
-const iconInfo = '<img src="https://status.github.com/images/invertocat.png" height=18 >';
-const urlGitHubSource = 'https://github.com/' + user + repo;
-const urlGitHubApiContents = 'https://api.github.com/repos/' + user + repo + '/contents/' + pathRepo;
-
-//const urlGitHubPage = location.href.includes( '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + branch;
-const urlGitHubPage  = 'https://rawgit.com/' + user + repo + branch;
-//console.log( 'urlGitHubPage', urlGitHubPage );
-
-
 //	location.hash = '../README.md';
 const uriDefaultFile = 'README.md';
-const urlSourceCode = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-theme-cms";
+const urlSourceCode = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-css";
 
 let themeName = localStorage.getItem( 'themeName' ) || 'https://bootswatch.com/_vendor/bootstrap/dist/css/bootstrap.css';
 
@@ -162,6 +136,7 @@ let yDown = null;
 
 
 init();
+
 
 
 function init() {
@@ -208,6 +183,16 @@ function setTestingExtras( target ) {
 
 		<summary>Extras</summary>
 
+		<p>
+			<button class="btn btn-primary" >button</button>
+			<button id=active class="btn btn-primary active" >active</button>
+			<button class="btn btn-primary" onclick=active.classList.remove("active"); >remove active</button>
+			<button class="btn btn-primary" onclick=active.classList.add("active"); >add active</button>
+			<button class="btn btn-primary" onclick=active.classList.toggle("active"); >toggle active</button>
+
+
+
+		</p>
 		<p><a href="#https://pushme-pullyou.github.io/pages/markdown-help.md" >markdown-help.md</a></p>
 
 		<p><a href="#https://pushme-pullyou.github.io/plugins/iframe-carousel-r1.html" >iframe-carousel-r1.html</a></p>
@@ -317,12 +302,6 @@ function onHashChange() {
 
 	const url = !location.hash ? uriDefaultFile : location.hash.slice( 1 );
 	const ulc = url.toLowerCase();
-
-	const crumbs = url.slice( urlGitHubPage.length );
-	const pathCurrent = crumbs.lastIndexOf( '/' ) > 0 ? crumbs.slice( 0, crumbs.lastIndexOf( '/' ) ) : '';
-	//console.log( 'pathCurrent',  pathCurrent );
-
-	setMenuGitHubPathFileNames( pathCurrent );
 
 	if ( ulc.endsWith( '.md' ) ) {
 
@@ -559,131 +538,6 @@ function toggleNav() {
 		divContainer.style.marginLeft = width;
 
 	}
-
-}
-
-
-
-//////////
-
-function setMenuGitHubPathFileNames( path = '' ) {
-
-	const url = urlGitHubApiContents + path;
-
-	requestFile( url, callbackGitHubPathFileNames );
-
-	setBreadcrumbs( path );
-
-}
-
-
-
-function callbackGitHubPathFileNames( xhr ) {
-
-	const response = xhr.target.response;
-	const items = JSON.parse( response );
-	const len = pathRepo.length;
-
-	let txt = '';
-
-	if ( items.message ) { console.log( items.message ); return; }
-
-	const ignoreFolders = [ 'data' ]; //, 'plugins'
-
-	for ( let item of items ) {
-
-		if ( item.type === 'dir' ) {
-
-			if ( ignoreFolders.includes( item.name ) ) { continue; }
-
-			txt +=
-				'<div style=margin-bottom:8px; >' +
-					'<a href=JavaScript:setMenuGitHubPathFileNames("' + item.path.slice( len )  + '"); >&#x1f4c1; ' +
-						item.name  +
-					'</a>' +
-				'</div>' +
-			'';
-
-		}
-
-	}
-
-	const ignoreFiles = [ '.gitattributes', '.gitignore', '404.html' ];
-
-	for ( let item of items ) {
-
-		if ( item.type === 'file' ) {
-
-			if ( ignoreFiles.includes( item.name ) ) { continue; }
-
-			itemPath = encodeURI( item.path.slice( len ) );
-
-			txt += // try grid or flexbox??
-				'<table><tr>' +
-
-					'<td><a href="' + urlGitHubSource + '/blob' + branch + itemPath + '" target=_top >' + iconInfo + '</a></td>' +
-					'<td>' +
-
-						'<a href=#' + urlGitHubPage + pathRepo + itemPath +
-						' title="' + item.size.toLocaleString() + ' bytes" > ' + item.name + '</a> ' +
-						( item.path.endsWith( 'html' ) ? '<a href=' + urlGitHubPage + pathRepo + itemPath + ' >&#x2750;</a>' : '' ) +
-
-					'</td>' +
-
-				'</tr></table>';
-
-			// simplify
-			if ( ( !location.hash || location.hash.toLowerCase().endsWith( 'readme.md' ) )
-				//&& item.path !== 'README.md'
-				&& item.name.toLowerCase() === 'readme.md' ) {
-
-				location.hash = urlGitHubPage + pathRepo + itemPath;
-
-			}
-
-		}
-
-	}
-
-	divMenuItems.innerHTML = txt;
-
-}
-
-
-
-function setBreadcrumbs( path ) {
-
-	let txt =
-		'<b>' +
-			'<a href=JavaScript:setMenuGitHubPathFileNames(); >' +
-
-				( pathRepo ? pathRepo : '<span style=font-size:24px >&#x2302</span>' ) +
-
-			'</a> &raquo; ' +
-		'</b>';
-
-	const folders = path ? path.split( '/' ) : [] ;
-
-	let str = '';
-
-	for ( let folder of folders ) {
-
-		str += folder + '/';
-
-		txt += '<b><a href=JavaScript:setMenuGitHubPathFileNames("' + str.slice( 0, -1 ) + '"); >' + folder + '</a> &raquo; </b>';
-
-	}
-
-	divBreadcrumbs.innerHTML = txt;
-
-}
-
-
-
-function setGPATStorage() {
-
-	const GitHubPersonalAccessToken = inpGitHubPersonalAccessToken.value;
-	localStorage.setItem('GitHubPersonalAccessToken', GitHubPersonalAccessToken );
 
 }
 
