--- a/tootoo12/ladybug-tools-spider/hamburger-theme-cms.html
+++ b/tootoo12/ladybug-tools-spider/hamburger-theme-cms.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="utf-8" >
 <meta name="viewport" content = "width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" >
-<meta name=description content="This is a basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop fule reading capability, access to frequently used pages and more" >
+<meta name=description content="View all the files on Ladybug Tools / Spider with this basic html content management script with sliding menu, css theme selection, Markdown to HTML, drag and drop fule reading capability, access to frequently used pages and more." >
 <meta name=keywords content="JavaScript,GitHub,FOSS,3D,STEM" >
 <meta name = "date" content = "2018-07-24" >
-<title>hamburger theme cms r1.1</title>
+<title>Spider</title>
 <style>
 /* Copyright 2018 pushMe pullYou authors. MIT License */
 
@@ -37,8 +37,7 @@
 
 	body, html { font: 12pt "Trebuchet MS", helvetica, sans-serif; height: 100%; margin: 0; }
 
-	button, input[ type=button ] { background-color: #ddd; border: none; color: var( --mnu-color ); cursor: pointer; padding: 3px 20px; }
-
+	button, input[ type=button ] { background-color: #ddd; border: none;
 	iframe { border: none; width: 100%; }
 
 	input[ type = range ] { -webkit-appearance: none; -moz-appearance: none; background-color: #ddd; width: 100%; }
@@ -59,8 +58,7 @@
 	<div id = "divMenu" class="jumbotron" >
 
 		<div>
-			<a class="breadcrumb-item" href = "../index.html" target="_top" >repo</a>
-			<a class="breadcrumb-item" href= "./index.html" target="_top" style=font-size:24px; >&#x2302;</a>
+			<a class="breadcrumb-item" href = "../index.html" target="_top" >Ladybug Tools</a>
 		</div>
 
 		<div id = "divTitle" ></div>
@@ -92,7 +90,7 @@
 
 			<details>
 
-				<summary>Settings</summary>
+				<summary>Themes</summary>
 
 				<div id=divBootswatch ></div>
 
@@ -129,7 +127,7 @@
 
 	</div>
 
-	<button id = "hamburger" class = "btn btn-primary" onclick=toggleNav(); > slide &#9776;  </button>
+	<button id = "hamburger" class = "btn btn-primary" onclick=toggleNav(); > slide &#9776; </button>
 
 <script>
 
@@ -137,8 +135,8 @@
 // jshint esversion: 6
 
 
-const user = 'pushme-pullyou';
-const repo = '/pushme-pullyou.github.io';
+const user = 'ladybug-tools';
+const repo = '/spider';
 const pathRepo = '';
 const branch = '/master/'
 
@@ -147,13 +145,14 @@ const urlGitHubSource = 'https://github.com/' + user + repo;
 const urlGitHubApiContents = 'https://api.github.com/repos/' + user + repo + '/contents/' + pathRepo;
 
 //const urlGitHubPage = location.href.includes( '/' + user + '.github.io' ) ? '' : 'https://rawgit.com/' + user + repo + branch;
-const urlGitHubPage  = 'https://rawgit.com/' + user + repo + branch;
+//const urlGitHubPage  = 'https://rawgit.com/' + user + repo + branch;
+const urlGitHubPage = '';
 //console.log( 'urlGitHubPage', urlGitHubPage );
 
 
 //	location.hash = '../README.md';
 const uriDefaultFile = 'README.md';
-const urlSourceCode = "https://github.com/pushme-pullyou/pushme-pullyou.github.io/tree/master/tootoo-templates/hamburger-theme-cms";
+const urlSourceCode = "https://github.com/ladybug-tools/spider/";
 
 let themeName = localStorage.getItem( 'themeName' ) || 'https://bootswatch.com/_vendor/bootstrap/dist/css/bootstrap.css';
 
@@ -179,7 +178,7 @@ function init() {
 		${ document.head.querySelector( '[name=description]' ).content }
 	</p>`;
 
-	setTestingExtras( divExtras );
+	//setTestingExtras( divExtras );
 
 	setTheme();
 
